--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@tsconfig/node12": "^12.1.0",
     "@types/express": "^4.17.14",
     "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.7",
